Difficulty is now an enum. Algorithm now uses Diffculty
